# sage

./: .dockerignore  .env.template  Dockerfile  README.md  alembic.ini  compose.override.yml  compose.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 2025_12_05_1120-0309f36239a7_init_migration.py  2025_12_06_1339-b06b792da046_initial_migration.py  2025_12_08_0932-7b2476fba1e8_autonomous_ingestion_jobs.py  2025_12_08_1058-b5723e7807a2_seed_data_sources.py
app/: crud.py  logging_config.py  main.py  utils.py
app/api/: deps.py  main.py
app/api/routes/: parcels.py  raster_stats.py  scheduler_status.py  time_series.py
app/clients/: sentinel_hub.py  sentinel_hub_auth.py
app/constants/: evalscripts.py
app/core/: config.py  database.py
app/models/: __init__.py  alerts.py  data_source.py  field.py  ingestion_job.py  parcel.py  raster_stats.py  schemas.py  time_series.py
app/pipeline/: generate_alerts.py  generate_time_series.py  ingestion_controller.py  ingestion_engine.py
app/scheduler/: alerts_scheduler.py  ingestion_scheduler.py  time_series_scheduler.py
app/services/: alerts_service.py  ingestion.py  ingestion_engine.py  ingestion_service.py  sentinel_hub_auth.py  time_series_service.py
app/tests/: conftest.py
tests/: conftest.py
tests/routes/: test_parcels.py  test_scheduler.py
tools/visualizer/: api.py  maps.py  streamlit_app.py
