[project]
name = "sg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "apscheduler>=3.11.1",
    "asgi-correlation-id>=4.3.4",
    "fastapi[standard]>=0.123.5",
    "folium>=0.20.0",
    "geoalchemy2[shapely]>=0.18.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "sentry-sdk[fastapi]>=2.46.0",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.52.1",
    "streamlit-folium>=0.25.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
